[tool.poetry]
name = "cloud-api-sample-01"
version = "0.1.0"
description = ""
authors = ["Kensho-Takizawa <kensho.takizawa@asia-quest.jp>"]
readme = "README.md"
packages = [{include = "cloud_api_sample_01"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
